# PSO

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.template.example.json  docker-compose.example.yml  proton-logicals.example.json  pso.config.example.json
.github/workflows/: ci.yml
docs/: dependencies.md  proton-api-shapes.md  providers.md  roadmap.md
src/: accounts.rs  api.rs  auth.rs  cli.rs  config.rs  control_plane.rs  crypto.rs  deploy.rs  filter.rs  health.rs  lib.rs  main.rs  model.rs  process.rs  proton.rs  provider.rs  provisioning.rs  session.rs  singbox_adapter.rs  state.rs  state_cli.rs  state_model.rs  supervisor.rs  supervisor_render.rs  template.rs  token_refresh.rs
src/api/: auth.rs  certificate.rs  http.rs  human_verification.rs  session.rs
src/auth/: mod.rs
src/control_plane/: mod.rs
src/debug_cli/: mod.rs
src/main_support/: mod.rs
src/main_tests/: mod.rs
src/proton/: mod.rs
src/provider/: mod.rs
src/provider_discovery/: mod.rs
src/provisioning/: mod.rs
src/scheduler/: mod.rs
src/session/: mod.rs
src/singbox_adapter/: mod.rs
src/state/: certificates.rs  cookies.rs  cookies_support.rs  diagnostics.rs  mod.rs  observability.rs  paths.rs  schema.rs  session.rs  support.rs  users.rs  wireguard.rs
src/state_model/: mod.rs
src/supervisor/: loops.rs  mod.rs  proton.rs  topology.rs  util.rs  wireguard.rs
src/time_utils/: mod.rs
src/users/: mod.rs
