[package]
name = "pso"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proton-Singbox Orchestrator multi-tenant control plane"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
libc = "0.2"
parking_lot = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }