[package]
name = "pso"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proton-Singbox Orchestrator multi-tenant control plane"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bcrypt = "0.19"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
libc = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
pgp = { version = "0.19", default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
rpassword = "7.5"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httpdate = "1"
sha2 = "0.11"
sha1 = "0.11"
sysinfo = "0.39"
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }